# kde-wallpaper-glsl

./: CMakeLists.txt  GLWidget.cpp  GLWidget.h  README.md  Wallpaper.cpp  Wallpaper.h  Wallpaper_plugin.h  config.ui  glsl-wallpaper.desktop  glsl-wallpaper.frag  glsl-wallpaper.vert  test.c
